--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,3 +1,8 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+.active{
+    @apply text-green-600 border-b border-b-green-600
+}
