--- a/client/src/index.css
+++ b/client/src/index.css
@@ -10,8 +10,8 @@
     @apply text-white font-semibold
 }
 .btn-danger{
-    @apply text-white bg-red-600 px-4 py-1 rounded-md font-semibold my-2 cursor-pointer
+    @apply text-white bg-red-500 hover:bg-red-600 px-8 py-2 rounded-md font-semibold my-2 cursor-pointer capitalize
 }
 .btn-success{
-    @apply text-white bg-green-500 px-4 py-1 rounded-md font-semibold my-2 cursor-pointer
+    @apply text-white bg-green-500 hover:bg-green-600 px-8 py-2 rounded-md font-semibold my-2 cursor-pointer capitalize
 }
