--- a/client/src/pages/home/banner/Banner.css
+++ b/client/src/pages/home/banner/Banner.css
@@ -1,6 +1,78 @@
-@import url("https://fonts.googleapis.com/css2?family=Belanosima&family=Ubuntu&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@400;500&display=swap');
 
 
 .swiper-pagination-bullet-active{
    background-color: white !important;
+}
+.swiper {
+  width: 100vw;
+  height: 100vh;
+}
+
+.swiper-slide {
+  text-align: center;
+  font-size: 18px;
+  background-size: cover;
+  background-position: center;
+}
+
+.mySwiper2 {
+  position: relative;
+  height: 100vh;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.mySwiper2 .overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  backdrop-filter: blur(5px);
+  font-family: 'Josefin Sans', sans-serif;
+  display: flex;
+  align-items: center;
+}
+
+.mySwiper {
+  position: absolute;
+  top: 50%;
+  right: -120%;
+  transform: translate(-50%, -50%);
+  box-sizing: border-box;
+  padding: 10px 0;
+  height: 60vh;
+  width: 100%;
+}
+
+.mySwiper .swiper-slide {
+  opacity: 0.4;
+}
+.mySwiper .swiper-slide img{
+  border-radius: 10px;
+}
+
+.mySwiper .swiper-slide-visible {
+  display: none;
+}
+.mySwiper .swiper-slide-thumb-active {
+  opacity: 10;
+  display: block;
+}
+
+.swiper-slide img {
+  display: block;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  object-position: center;
+}
+
+.swiper-button-next {
+  display: none;
+}
+.swiper-button-prev {
+  display: none;
 }
