--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,20 +1,39 @@
+@import url("https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300;400&family=Merriweather:wght@300;400&display=swap");
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
-
-body{
-    overflow-x: hidden !important;
+body {
+  overflow-x: hidden !important;
+  font-family: "Josefin Sans", sans-serif;
+  @apply tracking-wider;
 }
-.active{
-    @apply text-sky-500 font-semibold
+.heading {
+  background: -webkit-linear-gradient(#028f76, #0de5a8, #028f76);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
 }
-.default{
-    @apply text-white font-semibold
+.gradient-bg {
+  background-image: linear-gradient(to bottom right, #028f76, #0de5a8);
 }
-.btn-danger{
-    @apply text-white bg-red-500 hover:bg-red-600 px-8 py-2 rounded-md font-semibold my-2 cursor-pointer capitalize
+.gradient-bg:hover {
+  background-image: linear-gradient(to bottom right, #0de5a8, #028f76);
 }
-.btn-success{
-    @apply text-white bg-green-500 hover:bg-green-600 px-8 py-2 rounded-md font-semibold my-2 cursor-pointer capitalize
+.active {
+  @apply text-sky-500 font-semibold;
+}
+.default {
+  @apply text-white font-semibold;
+}
+.btn-danger {
+  @apply text-white bg-red-500 hover:bg-red-600 px-8 py-2 rounded-md font-semibold my-2 cursor-pointer capitalize;
+}
+.btn-success {
+  @apply text-white bg-green-500 hover:bg-green-600 px-8 py-2 rounded-md font-semibold my-2 cursor-pointer capitalize;
+}
+.overlay {
+  @apply absolute top-0 left-0 w-full h-full flex items-start md:items-center py-14 md:py-4;
+  font-family: "Josefin Sans", sans-serif;
+  backdrop-filter: blur(5px);
 }
