--- a/client/src/pages/home/banner/Banner.css
+++ b/client/src/pages/home/banner/Banner.css
@@ -1,8 +1,7 @@
-@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@400;500&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@400;500&display=swap");
 
-
-.swiper-pagination-bullet-active{
-   background-color: white !important;
+.swiper-pagination-bullet-active {
+  background-color: white !important;
 }
 .swiper {
   width: 100vw;
@@ -24,17 +23,17 @@
   justify-content: center;
   align-items: center;
 }
-.mySwiper2 .overlay {
+/* .mySwiper2 .overlay {
   position: absolute;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
   backdrop-filter: blur(5px);
-  font-family: 'Josefin Sans', sans-serif;
+  font-family: "Josefin Sans", sans-serif;
   display: flex;
   align-items: center;
-}
+} */
 
 .mySwiper {
   position: absolute;
@@ -50,7 +49,7 @@
 .mySwiper .swiper-slide {
   opacity: 0.4;
 }
-.mySwiper .swiper-slide img{
+.mySwiper .swiper-slide img {
   border-radius: 10px;
 }
 
@@ -75,4 +74,15 @@
 }
 .swiper-button-prev {
   display: none;
+}
+@media (max-width: 500px) {
+  .mySwiper {
+    position: absolute;
+    top: 80% !important;
+    right: -90% !important;
+    transform: translate(-50%, -50%);
+    padding: 10px 0;
+    height: 30vh;
+    width: 100%;
+  }
 }
